# PylonVTools

vs2019_Projects/pylonDataProcessing/C++/: CMakeLists.txt
vs2019_Projects/pylonDataProcessing/C++/barcode/: CMakeLists.txt  barcode.precipe  main.cpp
vs2019_Projects/pylonDataProcessing/C++/camera/: CMakeLists.txt  camera.precipe  main.cpp
vs2019_Projects/pylonDataProcessing/C++/cmake/: Findpylon.cmake  FindpylonDataProcessing.cmake
vs2019_Projects/pylonDataProcessing/C++/compositedatatypes/: CMakeLists.txt  composite_data_types.precipe  main.cpp
vs2019_Projects/pylonDataProcessing/C++/vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PylonDataProcessingSamples.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs2019_Projects/pylonDataProcessing/C++/vs2019/barcode/: BarcodeRecipeSample.vcxproj  BarcodeRecipeSample.vcxproj.filters  cmake_install.cmake
vs2019_Projects/pylonDataProcessing/C++/vs2019/camera/: CameraRecipeSample.vcxproj  CameraRecipeSample.vcxproj.filters  cmake_install.cmake
vs2019_Projects/pylonDataProcessing/C++/vs2019/compositedatatypes/: CompositeDataTypesSample.vcxproj  CompositeDataTypesSample.vcxproj.filters  cmake_install.cmake
vs2019_Projects/pylonDataProcessing/RecipeTemplates/: template_BarcodeReader.precipe  template_BlobAnalysis.precipe  template_ColorBlobAnalysis.precipe  template_DataMatrixCodeReader.precipe  template_GeometricPatternMatchingPro.precipe  template_ImageFormatConverter.precipe  template_Measurements.precipe  template_QrCodeReader.precipe
